--- a/public/views/group.ejs
+++ b/public/views/group.ejs
@@ -33,13 +33,15 @@
             <div class="row">
               <div class="col-12">
                 <div class="col-2 group-dash">
-                  <div overflow="auto" class="group-users-list">
+                  <div class="group-users-list">
                     <h3>Members</h3>
-                    <ul>
-                    <% Group.users.forEach(function(user) { %>
-                      <li><a class="group-users-username" href="#"><%= user.username%></a></li>
-                    <% }) %>
-                    </ul>
+                    <div class="group-users-container">
+                      <ul>
+                        <% Group.users.forEach(function(user) { %>
+                          <li><a class="group-users-username" href="#"><%= user.username%></a></li>
+                          <% }) %>
+                        </ul>
+                      </div>
                   </div>
                 </div>
 
@@ -50,7 +52,7 @@
                       <ul>
                         <% Group.books.forEach(function(book) { %>
                           <% if(!book.borrower) {  %>
-                            <li><a href="/book/<%= book._id%>/<%= book.owner._id%>"><%= book.title %> by: <%= book.author %></a></li>
+                            <li class="group-available-book-item"><a href="/book/<%= book._id%>/<%= book.owner._id%>"><%= book.title %> by: <%= book.author %></a></li>
                             <% } %>
                             <% }) %>
                           </ul>
@@ -77,19 +79,21 @@
     </section>
 
     <div class="add-book-to-group-list">
-      <ul>
-        <% User.books.forEach(function(book) {%>
-          <% if(!book.borrower && !book.group) { %>
-            <li>
-              <form action="/add-book-to-group/<%= book._id%>/<%= Group._id%>" method="post">
-                <a href="#"><%= book.title %> by: <%= book.author%></a>
-                <input class="btn" type="submit" value="Add book">
-              </form>
+      <div class="group-add-book-container">
+        <ul>
+          <% User.books.forEach(function(book) {%>
+            <% if(!book.borrower && !book.group) { %>
+              <li>
+                <form action="/add-book-to-group/<%= book._id%>/<%= Group._id%>" method="post">
+                  <a href="#"><%= book.title %> by: <%= book.author%></a>
+                  <input class="btn" type="submit" value="Add book">
+                </form>
             </li>
           <% } %>
         <% })%>
       </ul>
-      <button type="button" name="button" class="add-book-to-group-cancel-btn btn">Cancel</button>
+      </div>
+      <button type="button" name="button" class="add-book-to-group-cancel-btn btn btn-decline">Cancel</button>
     </div>
 
   </body>
