--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,10 +14,7 @@ h1, h2, h3, h4, h5, p {
 a {
     text-decoration: none;
 }
-
-a:hover {
-  opacity: .7;
-}
+a:hover { opacity: .7; }
 
 li {
   list-style: none;
@@ -32,6 +29,14 @@ body {
   border: none;
   padding: 5px 10px 5px 10px;
   color: #ffffff;
+}
+
+.btn-decline {
+  background-color: #d9534f;
+}
+
+.btn-accept {
+  background-color: #5cb85c;
 }
 
 .btn:hover {
@@ -423,8 +428,8 @@ body {
   height: 300px;
   padding: 50px 25px;
 
-  background-color: #1ebbff;
-  border: 1px solid #0077aa;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
   border-radius: 15px;
 }
 
@@ -473,8 +478,8 @@ body {
   height: 400px;
   padding: 50px 25px;
 
-  background-color: #1ebbff;
-  border: 1px solid #0077aa;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
   border-radius: 15px;
 }
 
@@ -513,7 +518,9 @@ body {
   font-style: italic;
 }
 
+
 .invite-name {
+  margin-bottom: 10px;
   color: #433e90;
 }
 
@@ -531,11 +538,23 @@ body {
 
 .dash-collection-book-info {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.dash-collection-book-info:last-child {
+  border: none;
 }
 
 .dash-collection-book-info>a>p {
   font-style: italic;
   font-size: 16px;
+}
+
+.collection-book-info-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .dash-collection-container {
@@ -568,6 +587,48 @@ body {
   overflow: auto;
 }
 
+.borrow-request-container {
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+
+.borrow-request-btn-container {
+  display: flex;
+  display: -webkit-flex;
+
+  justify-content: space-between;
+}
+
+.borrow-request-container form:last-child {
+  align-self: flex-end;
+}
+
+.borrow-request-container form:first-child {
+  margin-right: 20px;
+}
+
+.borrow-request-container p{
+  font-size: 14px;
+  font-style: italic;
+}
+
+.return-container {
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+
+.return-container h4 {
+  font-size: 16px;
+  font-style: italic;
+}
+
+.return-btn-container {
+  margin-top: 5px;
+  display: flex;
+  display: -webkit-flex;
+
+  justify-content: space-between;
+}
 /* group view */
 .group{
   width: 100%;
@@ -583,8 +644,18 @@ body {
   box-shadow: 1px 1px 10px #cccccc;
 }
 
+.group-header-container form {
+  display: flex;
+}
+
+.group-header-container form input:first-child{
+  font-size: 15px;
+  padding-left: 10px;
+  margin-right: 20px;
+}
+
 .group-users-list {
-  height: 450px;
+  height: 400px;
   border-right: 1px solid #cccccc;
 }
 
@@ -592,8 +663,9 @@ body {
   margin-bottom: 20px;
 }
 
-.group-users-list>ul>li>a {
+.group-users-list a {
   color: #007D9B;
+  font-size: 20px;
 }
 
 .group-books-available {
@@ -619,17 +691,40 @@ body {
   top: 50%;
   margin-top: -325px;
   margin-left: -225px;
+  padding: 20px;
+}
+
+.add-book-to-group-list li a{
+  font-size: 22px;
+  margin-right: 20px;
+}
+
+.add-book-to-group-list li {
+  display: flex;
+  margin: 15px 0;
+}
+
+.add-book-to-group-list form {
+  display: flex;
+}
+
+.group-add-book-container {
+  overflow: auto;
+  height: 550px;
 }
 
 .add-book-to-group-cancel-btn {
   position: absolute;
   bottom: 0;
   margin-bottom: 25px;
+  font-size: 20px;
+  width: 120px;
 }
 
 .group-books-container {
   overflow: auto;
   flex-grow: 1;
+  margin-bottom: 30px;
 }
 
 .group-dash {
@@ -638,9 +733,55 @@ body {
   flex-direction: column;
 }
 
+.group-available-book-item {
+  margin: 15px 0;
+}
+
+.group-available-book-item>a {
+  color: #428bca;
+  font-size: 20px;
+}
+
+.add-book-to-group-btn {
+  font-size: 20px;
+  width: 280px;
+  height: 70px;
+  line-height: 10px;
+}
+
+.group-users-container {
+  overflow: auto;
+  height: 100%;
+  padding-right: 20px;
+}
+
+.group-users-container li {
+  margin: 10px 0;
+}
 /* Book view */
 .book {
   width: 100%;
   height: 100vh;
   padding-top: 100px;
+}
+
+.book-description {
+  margin-top: 20px;
+  font-style: italic;
+}
+
+.book-actions-container{
+  margin-top: 50px;
+}
+
+.book-actions-container form {
+  margin: auto;
+}
+
+.book-actions-container form input[type="submit"] {
+  background-color: #5cb85c;
+  border: none;
+  color: #ffffff;
+  padding: 5px 10px;
+  font-size: 20px;
 }
