--- a/public/css/main.css
+++ b/public/css/main.css
@@ -457,10 +457,15 @@ body {
   margin-bottom: 0px;
 }
 
-.add-collection-btn {
+.collection-btn-container button{
   font-size: 18px;
-  margin: 20px 0;
   padding: 10px 0;
+  padding-bottom: 17px;
+  width: 160px;
+}
+
+.collection-btn-container button:first-child {
+  margin-right: 20px;
 }
 
 .add-to-collection {
@@ -628,6 +633,51 @@ body {
 
   justify-content: space-between;
 }
+
+.collection-btn-container {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 18px;
+}
+
+.remove-from-collection {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -200px;
+  margin-top: -200px;
+  display: none;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.remove-from-collection-container {
+  width: 500px;
+  height: 400px;
+  padding: 50px 25px;
+  overflow: auto;
+
+}
+
+.remove-from-collection-container ul li form {
+  display: flex;
+}
+
+.remove-from-collection-container ul li form h4 {
+  flex-grow: 1;
+}
+
+.remove-from-collection-container ul li {
+  margin: 10px;
+}
+
+.btn-cancel-remove-collection {
+  margin-left: 20px;
+  font-size: 18px;
+  width: 120px;
+}
 /* group view */
 .group{
   width: 100%;
@@ -744,7 +794,7 @@ body {
 .add-book-to-group-btn {
   font-size: 20px;
   width: 280px;
-  height: 70px;
+  height: 50px;
   line-height: 10px;
 }
 
