--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -67,8 +67,10 @@
                           </ul>
                         </div>
 
-                <button class="btn add-collection-btn">Add a book</button>
-
+                  <div class="collection-btn-container">
+                    <button class="btn add-collection-btn">Add a book</button>
+                    <button class="btn remove-collection-btn btn-decline">Remove a book</button>
+                  </div>
               </div>
 
               <div class="col-3 dash-item">
@@ -162,7 +164,7 @@
 
     <div class="create-group">
       <div class="create-group-box">
-        <form action="/new-group" method="post">
+        <form action="/group/new" method="post">
           <input type="text" name="name" placeholder="name">
           <input class="btn" type="button" value="cancel">
           <input class="btn" type="submit" value="create group">
@@ -180,6 +182,24 @@
           <input class="btn" type="submit" value="Add book">
         </form>
       </div>
+    </div>
+
+    <div class="remove-from-collection">
+      <div class="remove-from-collection-container">
+        <ul>
+          <% User.books.forEach(function(book) {%>
+              <% if(!book.group && !book.borrower) { %>
+                <li>
+                  <form action="/remove-book-from-collection/<%= book._id%>" method="post">
+                    <h4><%= book.title%> by: <%= book.author%></h4>
+                    <input type="submit" class="btn btn-decline" value="Remove">
+                  </form>
+                </li>
+              <% } %>
+          <% })%>
+        </ul>
+      </div>
+      <button type="button" class="btn btn-decline btn-cancel-remove-collection">Cancel</button>
     </div>
 
   </body>
