--- a/public/views/group.ejs
+++ b/public/views/group.ejs
@@ -88,7 +88,7 @@
           <% User.books.forEach(function(book) {%>
             <% if(!book.borrower && !book.group) { %>
               <li>
-                <form action="/add-book-to-group/<%= book._id%>/<%= Group._id%>" method="post">
+                <form action="/group/book/add/<%= Group._id%>/<%= book._id%>" method="post">
                   <a href="#"><%= book.title %> by: <%= book.author%></a>
                   <input class="btn" type="submit" value="Add book">
                 </form>
