--- a/public/views/book.ejs
+++ b/public/views/book.ejs
@@ -21,15 +21,14 @@
               <h4>owner: <%= Book.owner.name%></h4>
               <h4>borrowed by: <%= Book.borrower%></h4>
               <p class="book-description"><%= Book.description %></p>
-            </div>
-          </div>
+            </div> </div>
           <div class="row">
             <col-12>
               <div class="book-actions-container">
                 <!-- need to fix this -->
                 <div class="container">
                   <% if(Book.owner._id.toString() !== User._id.toString() && !Book.borrower && Book.group) { %>
-                    <form action="/request-to-borrow-book/<%= Book._id%>/<%= Book.group.id%>/<%= Book.owner._id%>" method="post">
+                    <form action="/book/request-borrow/<%= Book._id%>/<%= Book.owner._id%>/<%= Book.group._id%>" method="post">
                       <input type="submit" class="btn" value="Request to borrow">
                     </form>
                   <% } %>
