--- a/public/views/group.ejs
+++ b/public/views/group.ejs
@@ -25,7 +25,7 @@
                     if(!book.borrower) return book
                   })%>
                   <p>Available books: <%= avail.length%></p>
-                  <form action="/send-group-invite/<%= Group._id%>" method="post">
+                  <form action="/group/send-invite/<%= Group._id%>" method="post">
                     <input type="text" name="username" placeholder="username">
                     <input class="btn" type="submit" value="Invite user">
                   </form>
