--- a/public/views/group.ejs
+++ b/public/views/group.ejs
@@ -44,7 +44,7 @@
                     <div class="group-users-container">
                       <ul>
                         <% Group.users.forEach(function(user) { %>
-                          <li><a class="group-users-username" href="#"><%= user.username%></a></li>
+                          <li><a class="group-users-username" href="/user/<%= user._id%>"><%= user.username%></a></li>
                           <% }) %>
                         </ul>
                       </div>
