--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -52,7 +52,7 @@
                                 <% if(book.borrower) {%>
                                   <p>borrowed by: <%= book.borrower %></p>
                                 <% }else if(!book.borrower && book.group) {%>
-                                  <form action="/remove-from-group/<%= book._id %>/<%= book.group.id %>" method="post">
+                                  <form action="/group/book/remove/<%= book.group._id %>/<%= book.id %>" method="post">
                                     <input type="submit" class="btn btn-decline" value="Remove from group">
                                   </form>
                                 <% } %>
