--- a/public/css/main.css
+++ b/public/css/main.css
@@ -840,6 +840,21 @@ body {
   margin: 10px 0;
 }
 
+.group-books-borrowed-container {
+  overflow: auto;
+  height: 350px;
+  padding-bottom: 10px;
+}
+
+.group-books-borrowed-container ul li a {
+  font-size: 20px;
+  color: #428bca;
+}
+
+.group-books-borrowed-container ul li {
+  margin-bottom: 10px;
+}
+
 /* User view */
 .user-info {
   padding-top: 100px;
@@ -883,4 +898,12 @@ body {
 .user-borrowed-books ul li a {
   color: #428bca;
   font-size: 20px;
+}
+
+.user-errors-container {
+  height: 60px;
+}
+
+.user-errors-container h4 {
+  color: #d9534f;
 }
