--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -31,7 +31,7 @@
           <input class="btn" type="submit" value="Login">
         </form>
 
-        <a href="/lostAccount">Forgot your username or password?</a>
+        <a href="/forgot">Forgot your username or password?</a>
         <a href="/signup">Don't have an account? Sign up here.</a>
       </div>
     </section>
