--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -197,5 +197,7 @@
       <button type="button" class="btn btn-decline btn-cancel-remove-collection">Cancel</button>
     </div>
 
+    <%- include footer -%>
+
   </body>
 </html>
