--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -9,5 +9,7 @@
 <body>
   <h2>Sorry there was an internal server error (500)</h2>
   <h3>Please try again</h3>
+
+  <%- include footer-%>
 </body>
 </html>
