--- a/public/views/footer.ejs
+++ b/public/views/footer.ejs
@@ -7,8 +7,8 @@
   </div>
 
   <div class="footer-right">
-    <a href="#"><img class="footer-img-link" src="../images/facebook-logo-button.png" alt="facebook"></a>
-    <a href="#"><img class="footer-img-link" src="../images/instagram-logo.png" alt="instagram"></a>
-    <a href="#"><img class="footer-img-link" src="../images/twitter-logo-button.png" alt="twitter"></a>
+    <a href="#"><img class="footer-img-link" src="./../images/facebook-logo-button.png" alt="facebook"></a>
+    <a href="#"><img class="footer-img-link" src="./../images/instagram-logo.png" alt="instagram"></a>
+    <a href="#"><img class="footer-img-link" src="./../images/twitter-logo-button.png" alt="twitter"></a>
   </div>
 </footer>
