--- a/public/views/group.ejs
+++ b/public/views/group.ejs
@@ -106,5 +106,7 @@
       <button type="button" name="button" class="add-book-to-group-cancel-btn btn btn-decline">Cancel</button>
     </div>
 
+    <%- include footer -%>
+
   </body>
 </html>
