--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -35,5 +35,7 @@
         <a href="/signup">Don't have an account? Sign up here.</a>
       </div>
     </section>
+
+    <%- include footer -%>
   </body>
 </html>
