--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -35,5 +35,7 @@
         <a href="/login">Already have an account? Login here.</a>
       </div>
     </section>
+
+    <%- include footer -%>
   </body>
 </html>
