--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -22,6 +22,16 @@
       </div>
     </section>
 
+    <section class="landing-page-how">
+      <div class="spacing-container">
+        <div class="steps-container">
+          <div class="row">
+            <h2>3 Simple steps</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <%- include footer -%>
 
   </body>
