--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,6 +209,15 @@ body {
   background-color: #1dcaff;
 }
 
+.steps-container {
+  height: 400px;
+  border: 1px solid red;
+}
+
+.spacing-container {
+  padding: 0 200px; 
+}
+
 /* Login page */
 .login-page {
   width: 100%;
@@ -934,4 +943,8 @@ footer a {
   width: 50px;
   height: 50px;
   margin-right: 20px;
+}
+
+footer p {
+  font-size: 12px;
 }
